tests/NormalTests/paczka1/small_fuzzy/99965584.err
Error in line 10: JmOOb5z95im S11 -1,4
Error in line 6: Dnr S614 71,0
